# DataAnalystHomeAssignement

./: DataAnalystHomeAssignment.html  DataAnalystHomeAssignment.ipynb  README.md  executive_summary.md  pyproject.toml  tech_report.md
data/: vpn_events.csv  vpn_external_factors.csv
