[tool.poetry]
name = "dataanalysthomeassignment"
version = "0.1.0"
description = "Proton Data Analyst Take Home Assignment"
authors = ["Elorri DESTIZONS <elorri.destizons@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
scipy = "^1.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
